# ms-access-mcp-server

./: .env.example  .gitignore  AGENTS.md  D:\code\python\ms-access-mcp-server\src\ms_access_mcp\adapters\wincom.py  LICENSE  Module1.bas  README.md  SECURITY.md  diagnostics.ps1  exploration.md  package.json  pyproject.toml  start-server.ps1
.atl/: .skill-registry.cache.json  skill-registry.md
.engram/: manifest.json
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
.opencode/: opencode.jsonc
.opencode/plans/: 2026-05-22-http-transport-security.md
db/: create-store-tables.sql
docs/: deployment.md  kdeconnect-windows-fix.md  query-analyzer-examples.md  session-termination-error.md
docs/architecture/: ai-boundary.md
docs/developer/: llm-adapter.md
frontend/: esbuild.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: apiClient.spec.ts  apiClient.ts  client.spec.ts  client.ts  types.ts
frontend/src/pages/: dashboard.spec.ts  dashboard.ts  jobs.spec.ts  jobs.ts  login.spec.ts  login.ts  schema.spec.ts  schema.ts
frontend/src/router/: index.spec.ts  index.ts
frontend/src/styles/: styles.css  variables.css
frontend/src/views/: DashboardView.spec.ts  DashboardView.vue  ErDiagramView.vue  JobMonitorView.vue  LoginView.spec.ts  LoginView.vue  erDiagramLayout.ts  (+2 more)
openspec/: config.yaml
sample-sql/: check-server.ps1  create-demo-tables.sql  find_mcp_handler.py  opencode-config.json  refactored_form_code.bas  start-server-for-test.ps1  start-server.ps1  test-all-tools-results.md  test-all-tools.py  test-all-tools.sh  test-com-thread.ps1  test-com-thread.sh  test-crud-data.py  test-crud-query.py  test-crud-table.py  test-dev-copy.py  test-export.py  test-form-report-lifecycle.py  test-linked-tables.py  test-mcp.ps1  test-migration.py  test-new-tools.py  test-vba-lifecycle.py  test_helper.py  verify_fixes.py
src/ms_access_mcp/: auth.py  config.py  logging.py  path_guard.py
tests/e2e/: conftest.py  helpers.py  test_data_edge_cases.py  test_lifecycle_http.py  test_multi_connection_advanced.py  test_query_analyzer_examples.py  test_real_server_transport.py  test_workflows_errors.py  test_workflows_http.py  test_workflows_pool.py
tests/integration/: conftest.py  generate_fixture.py  helpers.py  test_cli_serve.py  test_com_dispatcher.py  test_connection_pool_integration.py  test_http_transport.py  test_mcp_export.py  test_mcp_linked_tables.py  test_mcp_schema.py  test_mcp_system.py  test_mcp_tools_pool.py  test_migration.py  test_odbc_adapter.py  test_odbc_adapter_sqlite.py  test_real_adapter.py  test_wincom_advanced.py  test_wincom_data_write.py  test_wincom_dev_copy.py  test_wincom_form_report.py  test_wincom_mcp_tools.py  test_wincom_table_query.py  test_wincom_vba_write.py
tests/unit/: test_adapter_contracts.py  test_adapters.py  test_adapters_comprehensive.py  test_analysis_mcp.py  test_auth.py  test_backend_selector.py  test_cli.py  test_cli_backend_flag.py  test_com.py  test_com_automation_service.py  test_com_dispatcher.py  test_compact_repair.py  test_concrete_adapters.py  test_config.py  test_connect_policy.py  test_connection.py  test_connection_pool.py  test_connection_service.py  test_connection_service_alias.py  test_connector_registry.py  test_container.py  test_credential_vault.py  test_crud.py  test_data_crud.py  test_data_export.py  test_db_properties.py  test_dev_copy.py  test_dev_copy_service.py  test_execute_sql_script.py  test_export.py  test_export_import.py  test_export_strategies.py  test_idata_adapter_protocol.py  test_job_tracker.py  test_linked_tables.py  test_linked_tables_mcp.py  test_llm_adapter_contracts.py  test_llm_adapter_protocol.py  test_llm_config.py  test_llm_service.py  (+46 more)
(+149 files in other folders)
