[project]
name = "ms-access-mcp"
version = "0.1.0"
description = "MCP Server for Microsoft Access"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyodbc>=5.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
