[project]
name = "ms-access-mcp"
version = "0.1.0"
description = "MCP Server for Microsoft Access"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyodbc>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
excel = ["openpyxl>=3.1.0"]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "pyright>=1.1.300",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
markers = [
    "com_integration: Tests requiring Windows + MS Access COM automation (pywin32)",
    "odbc_integration: Tests requiring an ODBC driver for MS Access data operations",
    "slow: Tests that take more than 10 seconds to run",
]

[tool.ruff]
line-length = 100
