[project]
name = "ms-access-mcp"
version = "0.1.0"
description = "MCP Server for Microsoft Access"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyodbc>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
    "openpyxl>=3.1.5",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.0",
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
]
authors = [
    { name = "MS Access MCP Server contributors" }
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
excel = ["openpyxl>=3.1.0"]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "pyright>=1.1.300",
    "httpx>=0.28.0",
]

[project.scripts]
ms-access-mcp = "ms_access_mcp.cli.main:main"

[project.urls]
Homepage = "https://github.com/gentleman-programming/ms-access-mcp-server"
Repository = "https://github.com/gentleman-programming/ms-access-mcp-server"
Documentation = "https://github.com/gentleman-programming/ms-access-mcp-server#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
markers = [
    "com_integration: Tests requiring Windows + MS Access COM automation (pywin32)",
    "odbc_integration: Tests requiring an ODBC driver for MS Access data operations",
    "slow: Tests that take more than 10 seconds to run",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF001", # ambiguous variable name (may conflict with DB column names)
    "RUF012", # mutable class attributes (common in config classes)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
strict = true
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "error"